# socratic_method

./: .gitignore  README.md  judge_response.txt  pyproject.toml  socratic_method.py
outputs/evals/socratic_method--gpt-4.1-mini/3c190fc0/: metadata.json  results.jsonl
