[project]
name = "socratic-method"
description = "Teach a model the socratic method"
tags = ["socratic-method", "single-turn"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.2.post1",
    "pydantic>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["socratic_method.py"]
